--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-hello kk
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Your Name - Home</title>
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Personal Website</h1>
+    </header>
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>Your introduction goes here.</p>
+        </section>
+        <section>
+            <h2>Projects</h2>
+            <!-- List your projects here -->
+        </section>
+        <section>
+            <h2>Contact</h2>
+            <!-- Your contact information goes here -->
+        </section>
+    </main>
+    <footer>
+        <p>© 2023 Your Name</p>
+    </footer>
+</body>
+</html>
+
