--- a/index.html
+++ b/index.html
@@ -4,28 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Your Name - Home</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header, footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+        }
+        main {
+            margin: 20px;
+        }
+        .content-section {
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Personal Website</h1>
-    </header>
-    <main>
-        <section>
-            <h2>About Me</h2>
-            <p>Your introduction goes here.</p>
-        </section>
-        <section>
-            <h2>Projects</h2>
-            <!-- List your projects here -->
-        </section>
-        <section>
-            <h2>Contact</h2>
-            <!-- Your contact information goes here -->
-        </section>
-    </main>
-    <footer>
-        <p>© 2023 Your Name</p>
-    </footer>
+
+<header>
+    <h1>Welcome to My Personal Website</h1>
+</header>
+
+<main>
+    <div class="content-section">
+        <h2>About Me</h2>
+        <p>Your introduction goes here.</p>
+    </div>
+    <div class="content-section">
+        <h2>Projects</h2>
+        <!-- List your projects here -->
+    </div>
+    <div class="content-section">
+        <h2>Contact</h2>
+        <!-- Your contact information goes here -->
+    </div>
+</main>
+
+<footer>
+    <p>© 2023 Your Name</p>
+</footer>
+
+<script>
+    // Simple script to show interactivity
+    document.querySelector('header').addEventListener('click', () => {
+        alert('Header clicked!');
+    });
+</script>
+
 </body>
 </html>
-
