--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         <!-- List your projects here -->
     </div>
     <div class="content-section">
+        <h2>CV</h2>
+        <p><a href="CV.pdf" target="_blank">Open my CV</a></p>
+    </div>
+    <div class="content-section">
         <h2>Contact</h2>
         <!-- Your contact information goes here -->
     </div>
