--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="content-section">
         <h2>CV</h2>
-        <p><a href="CV.pdf" target="_blank">Open my CV</a></p>
+        <p><a href="CV_ljk.pdf" target="_blank">Open my CV</a></p>
     </div>
     <div class="content-section">
         <h2>Contact</h2>
