--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="content-section">
         <h2>Projects</h2>
         <!-- List your projects here -->
+        <p>Project1</p>
     </div>
     <div class="content-section">
         <h2>CV</h2>
